--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -54,19 +54,9 @@
       "metadata": {
         "id": "I7-hddPtE6mr"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!pip install transformers transformer_utils jaxtyping einops typeguard=2.13 -q"
+        "!pip install transformers transformer_utils jaxtyping einops typeguard==2.13 -q"
       ]
     },
     {
