remove bath dim in einsum

--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -77,6 +77,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -389,6 +390,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -454,8 +456,8 @@
         "\n",
         "    word_distribution = einops.einsum(\n",
         "        normalized_output, word_embeddings, \n",
-        "        \"batch token d_model, vocab d_model -> batch token vocab\"\n",
-        "    ).squeeze()\n",
+        "        \"batch token d_model, vocab d_model -> token vocab\"\n",
+        "    )\n",
         "    best_token = torch.argmax(word_distribution, dim=-1)\n",
         "    output_text = gpt2_tokenizer.decode(best_token)\n",
         "    print(output_text)\n",
