--- a/workshops/transformer/transformer.ipynb
+++ b/workshops/transformer/transformer.ipynb
@@ -2260,9 +2260,9 @@
       "source": [
         "@dataclass\n",
         "class TransformerTrainingArgs():\n",
-        "    batch_size = 16\n",
-        "    epochs = 10\n",
-        "    max_steps_per_epoch = 200\n",
+        "\tbatch_size = 16\n",
+        "\tepochs = 10\n",
+        "\tmax_steps_per_epoch = 200\n",
         "\tlr = 1e-3\n",
         "\tweight_decay = 1e-2\n",
         "\twandb_project: Optional[str] = \"day1-demotransformer\"\n",
