Adversarial_Attacks: remove "please use CPU" warning

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -14,18 +14,6 @@
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "accelerator": "CPU"
-      },
-      "source": [
-        "In Colab: Runtime -> Change run time type to CPU\n",
-        "\n",
-        "This is not strictly necessary, but it will save you time as GPU operations are tricky in this exercise."
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
         "id": "k47frxk_M8RV"
       },
       "source": [
@@ -138,7 +126,7 @@
         "torch.backends.cudnn.deterministic = True\n",
         "torch.backends.cudnn.benchmark = False\n",
         "\n",
-        "# Fetching the device that will be used throughout this notebook\n",
+        "# The first part of the notebook is run on the CPU, for simplicity\n",
         "device = torch.device(\"cpu\") \n",
         "print(\"Using device\", device)"
       ]
@@ -916,7 +904,7 @@
       "source": [
         "Feel free to add any additional classes and/or patch sizes.\n",
         "\n",
-        "**Note:** If you are generating the patches yourself, it takes ~3 minutes per patch, so you probably one to start by doing only one patch to test. An easy way of doing it is to add `[:1]` to the end of the `classes` and `patch_sizes` lists, which creates a list of only the first element of the original list (e.g. `class_names = [\"...\", ...][:1]`)."
+        "**Note:** If you are generating the patches yourself, it takes **~3 minutes per patch**, so you probably one to start by doing only one patch to test. An easy way of doing it is to add `[:1]` to the end of the `classes` and `patch_sizes` lists, which creates a list of only the first element of the original list (e.g. `class_names = [\"...\", ...][:1]`)."
       ]
     },
     {
@@ -1312,7 +1300,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.11.5"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
