Adversarial_Attacks: add all answers, more comments

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -193,7 +193,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Question: What is the difference between `model.eval()` and `p.requires_grad = False` in the next cell?"
+        "Question: What is the difference between `model.eval()` and `param.requires_grad = False` in the next cell?"
       ]
     },
     {
@@ -229,8 +229,8 @@
         "\n",
         "# No gradients needed for the network\n",
         "pretrained_model.eval()\n",
-        "for p in pretrained_model.parameters():\n",
-        "    p.requires_grad = False"
+        "for param in pretrained_model.parameters():\n",
+        "    param.requires_grad = False"
       ]
     },
     {
@@ -238,6 +238,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<details>\n",
+        "<summary>Answer</summary>\n",
+        "\n",
+        "`model.eval()` sets the model to evaluation mode. This is important for some layers, such as batch normalization and dropout, which behave differently during training and evaluation. For example, dropout randomly sets some activations to zero during training, but not during evaluation. Hence, we always need to set the model to evaluation mode when we want to use the model for inference.\n",
+        "\n",
+        "`param.requires_grad = False` sets the parameter to not require gradients, which means that it won't be a trainable parameter anymore and they won't keep their gradients.\n",
+        "</details>\n",
+        "\n",
+        "\n",
         "## Deep CNNs on ImageNet (Only Run)\n",
         "\n",
         "You can just collapse this section."
@@ -499,22 +508,32 @@
         "id": "nfL3fXoKIUTI"
       },
       "source": [
+        "```yaml\n",
+        "Difficulty: 🟠🟠🟠⚪⚪\n",
+        "Importance: 🔵🔵🔵⚪⚪\n",
+        "\n",
+        "You should spend 20~40 min on this exercise.\n",
+        "```\n",
+        "\n",
         "Question: FGSM is said to be an untargeted attack, meaning they effectively try to change the label to any alternative, rather than change it to a particular alternative. What would we have to do to adapt FGSM to be a targeted attack?\n",
         "\n",
+        "<details>\n",
+        "<summary>Answer</summary>\n",
         "\n",
-        "Question: Why do you need `model.eval()` and `for p in pretrained_model.parameters(): p.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?\n",
+        "We would have to change the sign of the gradient to be negative, so that we minimize the loss instead of maximizing it. We would also have to change the loss function to be the negative log-likelihood of the corrupt target class, instead of the cross-entropy loss.\n",
+        "</details>\n",
         "\n",
-        "Answer: ...\n"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DEJdxFH-JRKl"
-      },
-      "source": [
-        "Question: Complete `fast_gradient_sign_method`."
+        "Question: Why do you need `model.eval()` and `for param in pretrained_model.parameters(): param.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?\n",
+        "\n",
+        "<details>\n",
+        "<summary>Answer</summary>\n",
+        "\n",
+        "- `model.eval()` desactivates dropout and changes the behavior of batch normalization layers. This is important for inference, as it make the model use the whole network, and not only a part of it and be more deterministic.\n",
+        "- `param.requires_grad = False` sets the parameter to not require gradients, which means that it won't be a trainable parameter. We don't want to store the gradients of every parameter for FGSM, but only the gradients of the input image.\n",
+        "- `with torch.no_grad()` would prevent the technique to work as it disables ALL gradients, including the gradients of the input image, which we need to compute the adversarial example.\n",
+        "</details>\n",
+        "\n",
+        "Now, complete the function below to perform the FGSM attack on an image!"
       ]
     },
     {
@@ -535,13 +554,16 @@
         "    Returns:\n",
         "    detached tensor: fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
-        "    # Tip: Just calculate the loss (nn.CrossEntropyLoss) and do a gradient ascent instead of a gradient descent.\n",
-        "    ... \n",
+        "    \n",
         "    ...\n",
+        "    # Tip: Calculate the loss (nn.CrossEntropyLoss) and do a gradient ascent instead of a gradient descent.\n",
+        "    ... \n",
         "\n",
         "    # TODO: The following lines only show the type of what has to be returned and should be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
-        "    # We use detach to remove the gradient information from our outputs, \n",
+        "    ...\n",
+        "\n",
+        "    # We use detach to remove the gradient information from our outputs\n",
         "    fake_imgs.detach_()\n",
         "    noise_grads.detach_()\n",
         "    return fake_imgs, noise_grads"
@@ -554,6 +576,30 @@
         "id": "x5dBCTrFM8Rd"
       },
       "source": [
+        "<details>\n",
+        "<summary>Solution</summary>\n",
+        "    \n",
+        "```python\n",
+        "def fast_gradient_sign_method(model, images, labels, epsilon=0.02):\n",
+        "    # We clone the image to not do inplace operations on it\n",
+        "    input_images = images.clone()\n",
+        "    # We want the gradient with respect to the input image\n",
+        "    input_images.requires_grad = True\n",
+        "    # Determine prediction of the model\n",
+        "    logits = model(input_images)\n",
+        "    # Calculate loss with respect to the true label\n",
+        "    loss = nn.CrossEntropyLoss()(logits, labels)\n",
+        "    # Compute the gradients\n",
+        "    loss.backward()\n",
+        "    # Update image to adversarial example as written above\n",
+        "    noise_grad = torch.sign(input_images.grad)\n",
+        "    fake_imgs = images + epsilon * noise_grad\n",
+        "    # Remove the tensor from the computational graph, otherwise plots won't work\n",
+        "    fake_imgs.detach_()\n",
+        "    return fake_imgs, noise_grad\n",
+        "```\n",
+        "</details>\n",
+        "\n",
         "The default value of $\\epsilon=0.02$ corresponds to changing a pixel value by about 1 in the range of 0 to 255, e.g. changing 127 to 128. This difference is marginal and can often not be recognized by humans. Let's try it below on our example images:"
       ]
     },
@@ -621,7 +667,7 @@
         "id": "stBwNC-VM8Re"
       },
       "source": [
-        "### Adversarial Patches (Bonus)\n",
+        "### Bonus: Adversarial Patches\n",
         "\n",
         "**Note**: you need a notebook with a GPU for this part, you can select one in Colab: Runtime -> Change run time type -> GPU."
       ]
@@ -632,7 +678,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "assert torch.cuda.is_available(), \"GPU device not found.\"\n",
+        "assert torch.cuda.is_available(), \"GPU device not found. In Colab, please activate the GPU in the menu 'Runtime' > 'Change runtime type' > 'GPU'.\"\n",
         "device = torch.device(\"cuda\")\n",
         "# Moving the model to the GPU\n",
         "pretrained_model = pretrained_model.to(device)"
@@ -649,6 +695,27 @@
         "Let's take a closer look at how we can actually train such patches. The general idea is very similar to FSGM in the sense that we calculate gradients for the input, and update our adversarial input correspondingly. However, there are also some differences in the setup. Firstly, we do not calculate a gradient for every pixel. Instead, we replace parts of the input image with our patch and then calculate the gradients just for our patch. Secondly, we don't just do it for one image, but we want the patch to work with any possible image. Hence, we have a whole training loop where we train the patch using SGD. Lastly, image patches are usually designed to make the model predict a specific class, not just any other arbitrary class except the true label. For instance, we can try to create a patch for the class \"toaster\" and train the patch so that our pretrained model predicts the class \"toaster\" for any image with the patch in it.\n",
         "\n",
         "Additionally, to the setup described above, there are a couple of design choices we can take. For instance, [Brown et al.](https://arxiv.org/pdf/1712.09665.pdf) randomly rotated and scaled the patch during training before placing it at a random position in an input image. This makes the patch more robust to small changes and is necessary if we want to fool a neural network in a real-world application. For simplicity, we will only focus on making the patch robust to the location in the image. Given a batch of input images and a patch, we can add the patch as follows:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def place_patch(img, patch):\n",
+        "    for i in range(img.shape[0]):\n",
+        "        h_offset = np.random.randint(0,img.shape[2]-patch.shape[1]-1)\n",
+        "        w_offset = np.random.randint(0,img.shape[3]-patch.shape[2]-1)\n",
+        "        img[i,:,h_offset:h_offset+patch.shape[1],w_offset:w_offset+patch.shape[2]] = patch_forward(patch)\n",
+        "    return img"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The patch itself will be an `nn.Parameter` whose values are in the range between and $-\\infty$ and $\\infty$. Images are, however, naturally limited in their range, and thus we write a small function that maps the parameter into the image value range of ImageNet:"
       ]
     },
     {
@@ -720,7 +787,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Question: Complete patch_attack"
+        "Exercise: Complete `patch_attack`\n",
+        "\n",
+        "```yaml\n",
+        "Difficulty: 🟠🟠🟠⚪⚪\n",
+        "Importance: 🔵🔵🔵🔵⚪\n",
+        "\n",
+        "You should spend 15~40 min on this exercise.\n",
+        "```"
       ]
     },
     {
@@ -852,6 +926,13 @@
         "                   for cname in patch_dict}\n",
         "    with open(os.path.join(CHECKPOINT_PATH, \"patch_results.json\"), \"w\") as f:\n",
         "        json.dump(result_dict, f, indent=4)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Additionally, we implement a function to train and evaluate patches for a list of classes and patch sizes. The pretrained patches include the classes *toaster*, *goldfish*, *school bus*, *lipstick*, and *pineapple*. We chose the classes arbitrarily to cover multiple domains (animals, vehicles, fruits, devices, etc.). We trained each class for three different patch sizes: $32\\times32$ pixels, $48\\times48$ pixels, and $64\\times64$ pixels. We can load them in the two cells below."
       ]
     },
     {
