Adversarial_Attacks: add small precision for images less corrupted

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -627,7 +627,8 @@
         "id": "GmRboOUsM8Re"
       },
       "source": [
-        "Despite the minor amount of noise (we change each pixel value by ±1), we are able to fool the network on most of our examples. In some, none of the labels have made it into the top-5, showing that we indeed fooled the model.\n",
+        "Despite the minor amount of noise (we change each pixel value by ±1), we are able to fool the network on most of our examples. In some, none of the labels have made it into the top-5, showing that we indeed fooled the model. In any case, the probability of the correct label decreased.\n",
+        "\n",
         "For those images where the model still predicts the correct label, we can increase the noise level $\\epsilon$ to make the attack stronger, however, if you increase it too much, the perturbation will become visible to humans.\n",
         "\n",
         "We can also check the accuracy of the model on the adversarial images:"
