transformer: use cpu only

--- a/workshops/transformer/transformer.ipynb
+++ b/workshops/transformer/transformer.ipynb
@@ -184,7 +184,7 @@
     "from pathlib import Path\n",
     "import webbrowser\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cpu\")\n",
     "\n",
     "reference_gpt2 = HookedTransformer.from_pretrained(\n",
     "    \"gpt2-small\", fold_ln=False, center_unembed=False, center_writing_weights=False\n",
@@ -5265,7 +5265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
