transformer: put the details steps of the attention in the hints.

--- a/workshops/transformer/transformer.ipynb
+++ b/workshops/transformer/transformer.ipynb
@@ -1514,48 +1514,8 @@
     "        # And to help us understand your code quickly, try to use only the following names with einops:\n",
     "        # batch nheads posn_Q posn_K d_model d_head\n",
     "\n",
-    "        # Calculate query, key and value vectors\n",
-    "        q = (\n",
-    "            einops.einsum(\n",
-    "                normalized_resid_pre,\n",
-    "                self.W_Q,\n",
-    "                \"batch posn d_model, nheads d_model d_head -> ???\",\n",
-    "            )\n",
-    "            + self.b_Q\n",
-    "        )\n",
-    "\n",
-    "        k = ...\n",
-    "\n",
-    "        v = ...\n",
-    "\n",
-    "        # Calculate attention scores\n",
-    "        attn_scores = einops.einsum(\n",
-    "            q,\n",
-    "            k,\n",
-    "            \"???,??? -> batch nheads posn_Q posn_K\",\n",
-    "        )\n",
-    "\n",
-    "        # then scale and apply mask and apply softmax on the correct dimension to get probabilities\n",
-    "        attn_scores_masked = self.apply_causal_mask(attn_scores / self.cfg.d_head**0.5)\n",
-    "        attn_pattern = attn_scores_masked.softmax(dim=...)\n",
-    "\n",
-    "        # Take weighted sum of value vectors, according to attention probabilities\n",
-    "        z = einops.einsum(\n",
-    "            v,\n",
-    "            attn_pattern,\n",
-    "            \"???,??? -> batch posn_Q nheads d_head\",\n",
-    "        )\n",
-    "\n",
-    "        # Calculate output (by applying matrix W_O and summing over heads, then adding bias b_O)\n",
-    "        attn_out = (\n",
-    "            einops.einsum(\n",
-    "                z,\n",
-    "                self.W_O,\n",
-    "                \"batch posn_Q nheads d_head, nheads d_head d_model -> batch posn_Q d_model\",\n",
-    "            )\n",
-    "            + self.b_O\n",
-    "        )\n",
-    "        return attn_out\n",
+    "        # If you're stuck, check the hints below\n",
+    "        ...\n",
     "\n",
     "    def apply_causal_mask(\n",
     "        self, attn_scores: Float[Tensor, \"batch n_heads query_pos key_pos\"]\n",
@@ -1582,6 +1542,67 @@
     "id": "Cn0_PpeKt3UT"
    },
    "source": [
+    "<details>\n",
+    "<summary>Hint: high level steps</summary>\n",
+    "\n",
+    "```python\n",
+    "# Calculate query, key and value vectors\n",
+    "# Calculate attention scores\n",
+    "# Then scale and apply mask and apply softmax on the correct dimension to get probabilities\n",
+    "# Take weighted sum of value vectors, according to attention probabilities\n",
+    "# Calculate output (by applying matrix W_O and summing over heads, then adding bias b_O)\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "<summary>Hint: detailed steps with only a few blanks to fill.</summary>\n",
+    "\n",
+    "```python\n",
+    "# Calculate query, key and value vectors\n",
+    "q = (\n",
+    "    einops.einsum(\n",
+    "        normalized_resid_pre,\n",
+    "        self.W_Q,\n",
+    "        \"batch posn d_model, nheads d_model d_head -> ???\",\n",
+    "    )\n",
+    "    + self.b_Q\n",
+    ")\n",
+    "\n",
+    "k = ...\n",
+    "\n",
+    "v = ...\n",
+    "\n",
+    "# Calculate attention scores\n",
+    "attn_scores = einops.einsum(\n",
+    "    q,\n",
+    "    k,\n",
+    "    \"???,??? -> batch nheads posn_Q posn_K\",\n",
+    ")\n",
+    "\n",
+    "# then scale and apply mask and apply softmax on the correct dimension to get probabilities\n",
+    "attn_scores_masked = self.apply_causal_mask(attn_scores / self.cfg.d_head**0.5)\n",
+    "attn_pattern = attn_scores_masked.softmax(dim=...)\n",
+    "\n",
+    "# Take weighted sum of value vectors, according to attention probabilities\n",
+    "z = einops.einsum(\n",
+    "    v,\n",
+    "    attn_pattern,\n",
+    "    \"???,??? -> batch posn_Q nheads d_head\",\n",
+    ")\n",
+    "\n",
+    "# Calculate output (by applying matrix W_O and summing over heads, then adding bias b_O)\n",
+    "attn_out = (\n",
+    "    einops.einsum(\n",
+    "        z,\n",
+    "        self.W_O,\n",
+    "        \"batch posn_Q nheads d_head, nheads d_head d_model -> batch posn_Q d_model\",\n",
+    "    )\n",
+    "    + self.b_O\n",
+    ")\n",
+    "return attn_out\n",
+    "```\n",
+    "</details>\n",
+    "\n",
     "\n",
     "\n",
     "<details>\n",
