vanilla_policy_gradient: add video of the cartpole

--- a/workshops/vanilla_policy_gradient/vanilla_policy_gradient.ipynb
+++ b/workshops/vanilla_policy_gradient/vanilla_policy_gradient.ipynb
@@ -5,22 +5,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vanilla Policy Optimisation\n",
-    "\n",
     "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/days/w1d5/vanilla_policy_gradient.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
-    "Preliminary questions:\n",
-    "- Run the script with the defaults parameters on the terminal\n",
-    "- Explain from torch.distributions.categorical import Categorical\n",
-    "- google gym python, why is it useful?\n",
-    "- Policy gradient is model based or model free?\n",
-    "- Is policy gradient on-policy or off-policy?\n",
+    "## Vanilla Policy Optimisation\n",
+    "\n",
+    "We will be looking at an implementation of the vanilla policy gradient algorithm, to train a policy to play CartPole: the goal is to balance a stick on a sliding cart. The agent can move the cart left or right. The episode ends when the stick falls over too much, or the cart moves too far away from the center.\n",
+    "\n",
+    "![CartPole](https://pytorch.org/tutorials/_images/cartpole.gif)\n",
+    "\n",
+    "\n",
     "\n",
     "Read all the code, then:\n",
     "- Complete the ... in the compute_loss function.\n",
-    "- Use https://github.com/google/jaxtyping to type the functions get_policy, get_action. You can draw inspiration from the compute_loss function.\n",
+    "- Use https://github.com/patrick-kidger/torchtyping to type the functions get_policy, get_action. You can draw inspiration from the compute_loss function.\n",
     "- Answer the questions\n",
     "\n",
+    "Questions:\n",
+    "- Run the script with the defaults parameters on the terminal\n",
+    "- Explain from torch.distributions.categorical import Categorical\n",
+    "- Is vanilla policy gradient (VPG) model based or model free?\n",
+    "- Is VPG on-policy or off-policy?\n",
+    "- google gym python, why is it useful?\n",
     "\n",
     "Don't begin working on this algorithms if you don't understand the blog: https://spinningup.openai.com/en/latest/spinningup/rl_intro3.html\n",
     "\n",
@@ -216,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
